[gd_scene load_steps=3 format=3 uid="uid://co2iow2pdcawg"]

[ext_resource type="Script" path="res://scenes/Menu/menu.gd" id="1_f7ar0"]
[ext_resource type="Texture2D" uid="uid://bwsc0pkedda0s" path="res://graphics/Backgrounds/WhiteBackground.jpeg" id="2_olu03"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f7ar0")

[node name="WhiteBackground" type="Sprite2D" parent="."]
position = Vector2(1003, 399)
texture = ExtResource("2_olu03")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.422068
anchor_right = 1.0
anchor_bottom = 0.577932
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="startKnap" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Start Spil"

[node name="controlsKnap" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Controls
"

[node name="quitKnap" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
modulate = Color(0.0431373, 0.0431373, 0.0431373, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Music Volume
"
horizontal_alignment = 1

[node name="musicSoundSlider" type="HSlider" parent="VBoxContainer/VBoxContainer"]
modulate = Color(0.0352941, 0.0509804, 0.00392157, 1)
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(572, 321)

[connection signal="pressed" from="VBoxContainer/startKnap" to="." method="_on_start_knap_pressed"]
[connection signal="pressed" from="VBoxContainer/controlsKnap" to="." method="_on_controls_knap_pressed"]
[connection signal="pressed" from="VBoxContainer/quitKnap" to="." method="_on_quit_knap_pressed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer/musicSoundSlider" to="." method="_on_music_sound_slider_value_changed"]
